# data-easy

./: .ghci  .gitignore  LICENSE  README.md  data-easy.cabal  easy-data.cabal  uniform-utils.cabal
src/Control/Monad/Trans/: Convert.hs
src/Data/: Easy.hs  UniformUtils.hs
test/: CMTCTest.hs  DataEasyTest.hs  main.hs
